--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ sqlalchemy
 scikit-learn
 faiss-cpu
 llama-index-vector-stores-faiss==0.3.0
+llama_index_llms_huggingface
+llama_index_embeddings_huggingface
