--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ faiss-cpu
 llama-index-vector-stores-faiss==0.3.0
 llama_index_llms_huggingface
 llama_index_embeddings_huggingface
-einops
+llama-index-experimental
